@@ -6,8 +6,12 @@ HISTORY
  
   ++ New features:
 
+  2016-12-31: Simon Goldschmidt
+  * tcp.h/.c: added function tcp_listen_with_backlog_and_err() to get the error
+    reason when listening fails (bug #49861)
+
   2016-12-14: Jan Breuer:
-  opt.h, ndc.h/.c: add support for RDNSS option (as per RFC 6106)
+  * opt.h, ndc.h/.c: add support for RDNSS option (as per RFC 6106)
 
   2016-12-14: David van Moolenbroek
   * opt.h, nd6.c: Added LWIP_HOOK_ND6_GET_GW()
